--- a/web/index.html
+++ b/web/index.html
@@ -1,43 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
+    <!--
+      If you are serving your web app in a path other than the root, change the
+      href value below to reflect the base path you are serving from.
 
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
+      The path provided below has to start and end with a slash "/" in order for
+      it to work correctly.
 
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+      For more details:
+      * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
 
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <base href="$FLUTTER_BASE_HREF">
+      This is a placeholder for base href that will be replaced by the value of
+      the `--base-href` argument provided to `flutter build`.
+    -->
+    <base href="$FLUTTER_BASE_HREF">
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+    <meta charset="UTF-8">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="description" content="A new Flutter project.">
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="web_app_sample">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="web_app_sample">
+    <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>web_app_sample</title>
-  <link rel="manifest" href="manifest.json">
+    <title>web_app_sample</title>
+    <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script src="https://cdn.webrtc.ecl.ntt.com/skyway-4.4.1.js"></script>
-  <script>
+<!-- This script installs service_worker.js to provide PWA functionality to
+     application. For more information, see:
+     https://developers.google.com/web/fundamentals/primers/service-workers -->
+<script src="https://cdn.webrtc.ecl.ntt.com/skyway-4.4.1.js"></script>
+<script>
     let peer;
     let room;
     let remoteAudioMap = {};
+    let localStream;
+
+    function setupLocalAudio(onSetupLocalAudio) {
+        console.log('index: setupLocalAudio: E');
+        try {
+            navigator.mediaDevices.getUserMedia({audio: true})
+            .then(function(stream) {
+              console.log('index: setupLocalAudio: on enabled.');
+              localStream = stream;
+              onSetupLocalAudio(true, '');
+            })
+            .catch(function(err) {
+              console.log('index: setupLocalAudio: on error.');
+              onSetupLocalAudio(false, err.message);
+            });
+        } catch(err) {
+            onSetupLocalAudio(false, err.message);
+        }
+        console.log('index: setupLocalAudio: X');
+    }
 
     function newPeer(key, debug, onOpenCallback) {
       console.log('index: newPeer: E');
@@ -53,12 +73,14 @@
                       onStreamCallback,
                       onDataCallback,
                       onPeerLeave,
-                      onClose) {
+                      onClose,
+                      onError) {
       console.log('index: joinRoom: E');
-      room = peer.joinRoom(roomId, {
-        mode: mode,
-        // stream: localStream,
-      });
+      if (localStream === 'undefined') {
+        room = peer.joinRoom(roomId, {mode: mode,});
+      } else {
+        room = peer.joinRoom(roomId, {mode: mode, stream: localStream,});
+      }
 
       room.once('open', () => {
         onOpenCallback();
@@ -73,23 +95,26 @@
       room.on('stream', async stream => {
         onStreamCallback();
         const remoteAudio = new Audio();
-        remoteAudioMap[stream.peerId] = remoteAudio;
         remoteAudio.srcObject = stream;
+        remoteAudioMap[stream.peerId] = remoteAudio;
         await remoteAudio.play().catch(console.error);
       });
 
       room.on('data', ({ data, src }) => {
-        console.log('index: data: E');
-        console.log(data);
+        console.log(`index: data: E: peerId: ${src}`);
+        // console.log(data);
         onDataCallback(data, src);
         console.log('index: data: X');
       });
 
       room.on('peerLeave', peerId => {
-        console.log('index: peerLeave: E');
-        //const remoteAudio = remoteAudioMap[stream.peerId];
-        //remoteAudio.srcObject.getTracks().forEach(track => track.stop());
-        //remoteAudio.srcObject = null;
+        console.log(`index: peerLeave: E: peerId: ${peerId}`);
+        if (typeof remoteAudioMap[peerId] !== 'undefined') {
+          console.log(`index: peerLeave: : stop remote audio.`);
+          const remoteAudio = remoteAudioMap[peerId];
+          remoteAudio.srcObject.getTracks().forEach(track => track.stop());
+          remoteAudio.srcObject = null;
+        }
         onPeerLeave(peerId);
         console.log('index: peerLeave: X');
       });
@@ -101,8 +126,8 @@
           const remoteAudio = remoteAudioMap[key];
           remoteAudio.srcObject.getTracks().forEach(track => track.stop());
           remoteAudio.srcObject = null;
-          onClose();
         }
+        onClose();
         console.log('index: close: X');
       });
       console.log('index: joinRoom: X');
@@ -110,7 +135,6 @@
 
     function sendData(data) {
       console.log('index: sendData: E');
-      console.log(data);
       room.send(data);
       console.log('index: sendData: X');
     }
@@ -118,9 +142,12 @@
     function leaveRoom() {
       room.close();
     }
-  </script>
 
-  <script>
+
+
+</script>
+
+<script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
     function loadMainDartJs() {
@@ -183,6 +210,9 @@
       // Service workers not supported. Just drop the <script> tag.
       loadMainDartJs();
     }
-  </script>
+
+
+
+</script>
 </body>
 </html>
