Rename project name.

--- a/web/index.html
+++ b/web/index.html
@@ -18,7 +18,7 @@
 
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-    <meta name="description" content="A new Flutter project.">
+    <meta name="description" content="Online mahjong game with voice chat.">
 
     <!-- iOS meta tags & icons -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,7 +26,9 @@
     <meta name="apple-mobile-web-app-title" content="web_app_sample">
     <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-    <title>web_app_sample</title>
+    <link rel="icon" type="image/png" href="favicon.png"/>
+
+    <title>y2 mahjong</title>
     <link rel="manifest" href="manifest.json">
 </head>
 <body>
@@ -250,10 +252,6 @@
       // Service workers not supported. Just drop the <script> tag.
       loadMainDartJs();
     }
-
-
-
-
 </script>
 </body>
 </html>
