--- a/web/index.html
+++ b/web/index.html
@@ -35,6 +35,14 @@
 <!-- This script installs service_worker.js to provide PWA functionality to
      application. For more information, see:
      https://developers.google.com/web/fundamentals/primers/service-workers -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PWTTDGMKFB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PWTTDGMKFB');
+</script>
 <script src="https://cdn.webrtc.ecl.ntt.com/skyway-4.4.1.js"></script>
 <script src="./skyway_wrapper.js"></script>
 
